# Simulated-Missile-Object-Tracking-Alert-System

./: .gitignore  CMakeLists.txt  README.md  data.txt
include/: sensor.h  sensorReading.h
src/: sensor.cpp
tests/: test_sensor.cpp
